# SDL-Tanks

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: bullet.h  tank.h  tanks_game.h
include/tanks/engine/: sprite_bank.h
include/tanks/game/: tank.h
src/: bullet.cpp  bullet.h  main.cpp  tank.cpp  tank.h  tanks_game.cpp  tanks_game.h
src/tanks/engine/: sprite_bank.cpp
src/tanks/game/: bullet.cpp  tank.cpp  tanks_game.cpp
